tests/lean/autoBoundImplicits1.lean.expected.out
myid 10 : Nat
myid true : Bool
autoBoundImplicits1.lean:20:25: error: unknown identifier 'size'
autoBoundImplicits1.lean:24:23: error: unknown identifier 'α'
autoBoundImplicits1.lean:24:25: error: unknown identifier 'n'
autoBoundImplicits1.lean:24:33: error: unknown identifier 'α'
autoBoundImplicits1.lean:24:37: error: unknown identifier 'β'
autoBoundImplicits1.lean:24:46: error: unknown identifier 'β'
autoBoundImplicits1.lean:24:48: error: unknown identifier 'n'
f : {α_1 : Type} → {n_1 : Nat} → Vec α_1 n_1 → Vec α_1 n_1
f mkVec : Vec ?m 0
f mkVec : Vec Nat 0
